example-apps/traefik-whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minikube.local
      secretName: whoami-selfsigned-tls
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /whoami
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
